Fixed image spacing and alignment

--- a/src/App.css
+++ b/src/App.css
@@ -82,22 +82,26 @@ h1 {
 }
 .searchResultDiv {
   border-radius: 7px;
-  box-shadow: 20px 10px 19px 0px rgba(0, 0, 0, 0.5);
-  width: 800px;
-  height: 150px;
-  margin: 0 auto;
+  box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.5);
+  width: 1200px;
+  height: 160px;
+  margin-left: -50px;
+  margin-right: auto;
   text-align: left;
   margin-top: 25px;
 }
 .searchResultDiv:hover {
   transform: scale(1.1);
+  /*box-shadow: 0px 0px 10px 4px rgba(30, 171, 255, 1.5);*/
+  box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.2);
 }
 .searchResultDiv h3 {
   color: #1a0dab;
 }
 .searchResultDiv h3 a {
   color: #1a0dab;
-  display: inline-block;
+  overflow-wrap: break-word;
+  /*display: inline-block;*/
   line-height: 16px;
   text-decoration: none;
 }
@@ -129,16 +133,20 @@ h1 {
   float: right;
   overflow: hidden;
   border-radius: 7px;
+  /*vertical-align: baseline;*/
   /*border: solid black;*/
-  width: 200px;
-  height: 90px;
+  width: 320px;
+  height: 160px;
+  /*box-shadow: 10px 0px 10px 5px rgba(0, 0, 0, 0.3);*/
 }
 .searchResultDiv .imageContainer:hover {
-  transform: scale(1.3);
+  /*transform: scale(1.3);*/
 }
 .searchResultDiv .imageContainer img {
+  height: auto;
+  /*border: solid;*/
   border-radius: 7px;
   float: right;
-  width: 180px;
-  height: auto;
+  width: 320px;
+  
 }
